# PitcherPolicy

./: .gitignore  LICENSE  README.md  assumptions.txt  ideas_todo.txt  obvious_zones.py  obvious_zones_test.py  pitcher_prediction.py  requirements.txt  setup.cfg  transition_model_2015-2019.h5  zone_test.py  zones.py
analysis/: OBP at Counts.ipynb  Pitcher, Batter Rankings.ipynb  Plotting OBPs.ipynb
data-cleaning/: README.md
model_training/: batter_patience.ipynb  pitcher_control.ipynb
models/: error_2015-2018.h5  take_2015-2018.h5  transition_model_2015-2018.h5  transition_model_expanded_outcomes.h5
pitcher_policy/: inning.py  pitch_zone_config.py  pitcher_policy.py  solve_inning.py  state.py  state_action_enums.py  stochastic_game.py
pitcher_prediction/: high_obp_nn_prob_swing_trans_mat.json  pitch_zone_config.py  pitcher_prediction.py  state_action_enums.py  stochastic_game.py  stochastic_game_new_trans.py  trans_prob_mat.json  trans_prob_mat.txt
pitcherpolicy/: pitch_zone_config.py  pitcherpolicy.py
pitcherprediction/: __init__.py  all_test.py  error_dist_test.py  helper_functions.py  obvious_zones.py  obvious_zones_test.py  pitch.py  pitch_test.py  pitch_zone_config.py  pitch_zone_enums.py  pitcher_prediction.py  state.py  state_test.py  stochastic_game.py  stochastic_game_test.py  swing_data.py  swing_data_test.py  test_config.py  test_swing_data.json  zone.py  zone_test.py  zones.py  zones_test.py
raw-data/: 2019_atbats.csv  2019_games.csv  2019_pitches.csv  atbats.csv  ejections.csv  games.csv  pitches.csv  player_names.csv
tests/: state_test.py
(+39 files in other folders)
