[metadata]
name = pitchprediction
description = My package description
long_description = README.md
author = Mia Bendy, Connor Douglas, Everett Witt
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    pitchprediction
python_requires = >=3.6
package_dir =
    =src

[flake8]
max-line-length = 88

